* Improved navigation styling * Additional page: overview * Improved "previewability"

--- a/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/WinkelPlanner_en.properties
+++ b/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/WinkelPlanner_en.properties
@@ -3,7 +3,8 @@
 application.legal.footer = Copyright &copy; 2010 Bert Van Vlerken All Rights Reserved
 application.login        = Login
 application.logout       = Logout
-application.nav.home     = Lists
+application.nav.lists    = Lists
+application.nav.overview = Overview
 application.nav.products = Products
 application.nav.shops    = Shops
 application.title        = Shopping Planner
